# pokeMMO-AFK-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pokeMMO_AFK_manager/: ImgProcessingModel.py  ScreenCaptureModel.py  WindowModel.py  config.py  controller.py  main.py  view.py
