[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeMMO-AFK-manager"
version = "0.1.0"
description = "Aplicación de escritorio para la gestión de scripts de farmeo en pokeMMO"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Acelga", email = "tu@email.com" }
]
dependencies = [
    "opencv-python",
    "mss",
    "pillow",
    "pathlib2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller",
]